Tue Jan 14 11:07:06 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/generate_export_file.pl: Added a patch from
	  Gonzalo Diethelm <gonzalo.diethelm@aditiva.com> which generates
	  an empty $Id$.

Mon Jan 13 12:53:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          The MingW compiler can handle the export/import macros.

        * ace/config-cygwin32.h:
          Corrected the guards around this header file.

Sat Jan 11 09:37:24 2003  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/OS_String.cpp (wcslen_emulation): Fixed a nasty formatting
	  glitch that made the code hard to read.  Thanks to Ruslan
 	  Zasukhin <sunshine@public.kherson.ua> for reporting this.

Fri Jan  3 21:46:00 2003  John Michael Zorko  <j.zorko@att.net>

        * netsvcs/clients/Naming/Client/Makefile: Added $(ACELIB) to
          ACE_SHLIBS to fix multple -lACE problem.  This wasn't an
          issue on Mac OS X 10.2, but could be on other platforms.

        * examples/ASX/CCM_App/Makefile: same as above
        * netsvcs/clients/Naming/Dump_Restore/Makefile: same as above

Wed Jan  8 19:27:49 2003  Steve Huston  <shuston@riverace.com>

        * ace/Message_Block.h: Doxygenized comments for release() and copy().

        * ace/UPIPE_Stream.{h cpp}: Removed the remaining_ member; use the
          ACE_Message_BLock::length() member function to find the amount
          of remaining data.

Wed Jan  8 12:17:10 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/ace-install: Fixed the improper usage of "or" in the "find "
	  command used to find the inlined files with extensions .i and
	  .inl. Thanks to Oliver Kellog for providing the patch.

Tue Jan  7 13:08:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACEXML/common/Makefile:
          Set ACEXML_BUILD_DLL when building the shared lib.
